Clip Editor doesn't respect ColorSpace setting when playback after Prefetch #44752

Closed
opened 2015-05-18 11:34:32 +02:00 by Sebastian Koenig · 4 comments

System Information
OSX 10.10.2 GTX 660ti

Blender Version
Broken: 2.74.5 (3dfce09)

Short description of error
If you change the colorspace of input footage, then do prefetch and then do playback, all prefetched frames are shown with the wrong colorspace

Exact steps for others to reproduce the error
This zip file contains 4 frames from Tears of Steel and a blendfile as an example. If you open the file you can see I have deliberately set the colorspace to sRGB instead of linear. In this example of course that is wrong, but in the project where I am working on right now we have EXRs which have been saved in sRGB. Don't ask ;) Anyway, if you prefetch first and then switch to the next frame, you can see how the display changes back to the linear colorspace, thereby overriding what I set in the dropdown menu.
prefetch.zip

**System Information** OSX 10.10.2 GTX 660ti **Blender Version** Broken: 2.74.5 (3dfce09) **Short description of error** If you change the colorspace of input footage, then do prefetch and then do playback, all prefetched frames are shown with the wrong colorspace **Exact steps for others to reproduce the error** This zip file contains 4 frames from Tears of Steel and a blendfile as an example. If you open the file you can see I have deliberately set the colorspace to sRGB instead of linear. In this example of course that is wrong, but in the project where I am working on right now we have EXRs which have been saved in sRGB. Don't ask ;) Anyway, if you prefetch first and then switch to the next frame, you can see how the display changes back to the linear colorspace, thereby overriding what I set in the dropdown menu. [prefetch.zip](https://archive.blender.org/developer/F176714/prefetch.zip)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Sebastian Koenig 2015-05-18 11:34:32 +02:00
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

This issue was referenced by cecd1f98a4

This issue was referenced by cecd1f98a4c1295421ca011ea5bec95b1c918111

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44752
No description provided.