Fix T44752: Clip Editor doesn't respect ColorSpace setting when playback after Prefetch